TMDBapp: added some tests